name:                th-expander
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/th-expander#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils.THExpander, Utils.THExpander.Envs, Utils.THExpander.Types
  build-depends:       base >= 4.7 && < 5, filesystem-trees, process, lens, split, bytestring, bool-kleisli, transformers, filepath, containers, parsec, MissingH
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/AnkalagonBlack/th-expander
